<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <com.github.siyamed.shapeimageview.CircularImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@mipmap/avatar"
            app:siBorderColor="@color/common_google_signin_btn_text_dark_pressed"
            app:siBorderWidth="2dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/full_name"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/email"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:src="@mipmap/account_outline"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center|start"
            android:paddingLeft="20dp"
            android:paddingRight="16dp"
            android:text="@string/profile"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:src="@mipmap/account_outline"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center|start"
            android:paddingLeft="20dp"
            android:paddingRight="16dp"
            android:text="@string/music"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:src="@mipmap/account_outline"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center|start"
            android:paddingLeft="20dp"
            android:paddingRight="16dp"
            android:text="@string/friends"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:weightSum="10"
        >

        <ImageView
            android:id="@+id/check"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:src="@mipmap/checkbox_blank_outline"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:paddingLeft="20dp"
                    android:paddingRight="16dp"
                    android:text="@string/notification"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/on_off_notification"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:paddingLeft="20dp"
                    android:paddingRight="16dp"
                    android:text="@string/off_notification"
                    android:textSize="16sp"/>
            </TableRow>

        </TableLayout>
    </LinearLayout>
</LinearLayout>
